# FraudNet

./: .gitignore  LICENSE  README.md
backend/: server.js
fraud_net/: CMakeLists.txt
fraud_net/include/utec/agent/: fraud_agent.h
fraud_net/include/utec/algebra/: tensor.h
fraud_net/include/utec/nn/: neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h
fraud_net/include/utec/utils/: csv_loader.h
fraud_net/src/: main.cpp
fraud_net/src/utec/agent/: fraud_agent.cpp
fraud_net/src/utec/utils/: csv_loader.cpp
frontend/: index.html
frontend/src/: App.jsx  index.css
